Correction to personal info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Chiranjeevi - Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">Chiranjeevi Resume</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Chiranjeevi
             <span class="text-primary">SD</span>
           </h1>
-          <div class="subheading mb-5">15 Downer Ct, MA 02122 · (315) 949-9120 ·
+          <div class="subheading mb-5">15 Downer Ct, Boston, MA 02122 · (315)949-9120 ·
             <a href="mailto:csdhanan@syr.edu">csdhanan@syr.edu</a>
           </div>
           <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
@@ -148,11 +148,12 @@
               <span class="text-primary">August 2016 - Dec 2017</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
+            
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">PES College of Engineering</h3>
-              <div class="subheading mb-3">Computer Science & Engineering</div>
+              <div class="subheading mb-3">Bachelor of Engineering</div>
+              <div>Computer Science & Engineering</div>
               <p>GPA: 3.8</p>
             </div>
             <div class="resume-date text-md-right">
