--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
@@ -101,7 +104,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Developer Intern</h3>
               <div class="subheading mb-3">Acquia</div>
-              <p>Built prototypes using latest JavaScript framework for Decoupled Drupal</p>
+              <p>Developed frontend UI for Decoupled-Drupal websites using ES6, Ember.JS and Node.JS</p>
+              <p>Developed REST API for Commenting System using Node.js. Used Ember.js and Bootstrap to develop frontend for it</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2017 - August 2017</span>
@@ -113,6 +117,7 @@
               <h3 class="mb-0">Software Engineer</h3>
               <div class="subheading mb-3">HCL Technologies</div>
               <p>Research & Development on Alcatel-Lucent's Network Management System.</p>
+              <p>Developed Security integration prototype for NMS platform and UI modules using Java and ShellScripts; It resulted in 2 new features for project in next release for a major customer</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2014 - July 2016</span>
@@ -123,7 +128,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Engineer</h3>
               <div class="subheading mb-3">Alcatel-Lucent</div>
-              <p>Research & Development on 3G Network Management System.</p>
+              <p>Research & Development on 3G Network Management System (NMS).</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2013 - July 2014</span>
@@ -160,6 +165,13 @@
               <span class="text-primary">August 2009 - July 2013</span>
             </div>
           </div>
+
+        </div>
+      </section>
+        
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
 
         </div>
       </section>
