--- a/index.html
+++ b/index.html
@@ -172,6 +172,33 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">User Management - React Web App</h3>
+              <p>Developed Single Page Web Application using REACT.JS & Redux; Used JavaScript tools like gulp, es-lint, react-router for workflow.</p>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Coffee Ordering Chat-Bot</h3>
+              <p>Developed a coffee ordering chat bot using AWS LEX. Used Severless framework with Lambda for input validation. Integrated Twilio’s Programmable SMS API to send confirmation SMS when a coffee order is placed.</p>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Book Store - MEAN Web App</h3>
+              <p>Developed Single Page Web Application using MEAN stack; lists various books & its details. Designed REST API using Node.JS which allows the app to create, update, delete and persist the book info to MongoDb.</p>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Key-Value NoSQL Database</h3>
+              <p>Designed & developed an in-memory NoSQL database, using standard C++ STL Libraries. It can add, edit, delete, persist, and query data from database.</p>
+            </div>
+          </div>
 
         </div>
       </section>
@@ -226,8 +253,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>I enjoy clicking pictures</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>I enjoy clicking pictures.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows and I spend a large amount of my free time exploring the latest technolgy advancements in the web development world.</p>
         </div>
       </section>
 
