--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Developer Intern</h3>
               <div class="subheading mb-3">Acquia</div>
-              <p>Developed frontend UI for Decoupled-Drupal websites using ES6, Ember.JS and Node.JS</p>
+              <p>Developed UI for Decoupled-Drupal websites using ES6, Ember.JS and Node.JS</p>
               <p>Developed REST API for Commenting System using Node.js. Used Ember.js and Bootstrap to develop frontend for it</p>
             </div>
             <div class="resume-date text-md-right">
@@ -117,7 +117,7 @@
               <h3 class="mb-0">Software Engineer</h3>
               <div class="subheading mb-3">HCL Technologies</div>
               <p>Research & Development on Alcatel-Lucent's Network Management System.</p>
-              <p>Developed Security integration prototype for NMS platform and UI modules using Java and ShellScripts; It resulted in 2 new features for project in next release for a major customer</p>
+              <p>Developed Security integration prototype for NMS platform and UI modules using Java and ShellScripts.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2014 - July 2016</span>
@@ -222,9 +222,6 @@
               <i class="devicons devicons-bootstrap"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="devicons devicons-gulp"></i>
             </li>
             <li class="list-inline-item">
@@ -254,7 +251,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>I enjoy clicking pictures.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows and I spend a large amount of my free time exploring the latest technolgy advancements in the web development world.</p>
+          <p class="mb-0">I spend a large amount of my free time exploring the latest technolgy advancements in the web development world.</p>
         </div>
       </section>
 
