Minor changes and tweaks.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
         <h1 class="mb-0">Chiranjeevi
           <span class="text-primary">SD</span>
         </h1>
-        <div class="subheading mb-5">15 Downer Ct, Boston, MA 02122 · (315)949-9120 ·
+        <div class="subheading mb-5">838 Cinnabar St, San Jose, CA 95126 · (315)949-9120 ·
           <a href="mailto:csdhanan@syr.edu">csdhanan@syr.edu</a>
         </div>
-        <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative
-          approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="mb-5"> Software Engineer / Java / JavaScript developer with strong background in web and Java application development and leadership
+          experience. I love building software applications - starting from early-stage prototype and transforming it into
+          something people truly value. I'm an active contributor to Mozilla's Open Source projects.</p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
             <a href="https://www.linkedin.com/in/chiranjeevi-sd/">
@@ -104,10 +105,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">JavaScript Application Developer</h3>
+            <div class="subheading mb-3">Acquia</div>
+            <p>Developed a preview system using React.js for Drupal based admin dashboard which enabled users to review the
+              content in real-time</p>
+            <p>Developed starter kit for Decoupled Drupal application using React.js & JavaScript dev tools</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2018 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Developer Intern</h3>
             <div class="subheading mb-3">Acquia</div>
-            <p>Developed UI for Decoupled-Drupal websites using ES6, Ember.JS and Node.JS</p>
-            <p>Developed REST API for Commenting System using Node.js. Used Ember.js and Bootstrap to develop frontend for it</p>
+            <p>Research & Development of UI for Drupal based applications using Ember.js and Node.js</p>
+            <p>Implemented Commenting System REST API using Node.js and integrated with Drupal application</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2017 - August 2017</span>
@@ -119,7 +133,9 @@
             <h3 class="mb-0">Software Engineer</h3>
             <div class="subheading mb-3">HCL Technologies</div>
             <p>Research & Development on Alcatel-Lucent's Network Management System.</p>
-            <p>Developed Security integration prototype for NMS platform and UI modules using Java and ShellScripts.</p>
+            <p>Developed Security integration prototype for 3G Network Management System’s (NMS) platform and UI modules using
+              Java and ShellScripts</p>
+            <p>Integrated latest Java(CSA) security API with NMS Web Application as a new feature</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2014 - July 2016</span>
@@ -131,6 +147,7 @@
             <h3 class="mb-0">Software Engineer</h3>
             <div class="subheading mb-3">Alcatel-Lucent</div>
             <p>Research & Development on 3G Network Management System (NMS).</p>
+            <p>Developed log parsing tool using ShellScript which enable debugging 2x faster</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2013 - July 2014</span>
@@ -161,7 +178,7 @@
             <h3 class="mb-0">PES College of Engineering</h3>
             <div class="subheading mb-3">Bachelor of Engineering</div>
             <div>Computer Science & Engineering</div>
-            <p>GPA: 3.8</p>
+            <p>GPA: 3.7</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2009 - July 2013</span>
@@ -201,60 +218,30 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Key-Value NoSQL Database</h3>
-            <p>Designed & developed an in-memory NoSQL database, using standard C++ STL Libraries. It can add, edit, delete,
-              persist, and query data from database.</p>
+            <p>Designed & developed an in-memory NoSQL database, using standard Java Collection Libraries</p>
+            <p>It supports CRUD and querying data from DB. Persistence of Db is achieved using XML documents</p>
           </div>
         </div>
-
-      </div>
-
-      <!-- Prepare a container for your calendar. -->
-      <div class="calendar">
-        <!-- Loading stuff -->
-        Loading the data just for you.
       </div>
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
       <div class="my-auto">
         <h2 class="mb-5">Skills</h2>
-
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline list-icons">
-          <li class="list-inline-item">
-            <i class="devicons devicons-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-css3"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-javascript"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-bootstrap"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-npm"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            JAVA</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            JavaScript</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            React.js</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Node.js</li>
         </ul>
       </div>
     </section>
@@ -289,17 +276,6 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
-
-  <!-- Include the library. -->
-  <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
-
-  <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css" />
-
-  <script>
-    GitHubCalendar(".calendar", "csd713");
-  </script>
-
 </body>
 
 </html>
