Minor changes and tweaks.

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         <div class="subheading mb-5">838 Cinnabar St, San Jose, CA 95126 · (315)949-9120 ·
           <a href="mailto:csdhanan@syr.edu">csdhanan@syr.edu</a>
         </div>
-        <p class="mb-5"> Software Engineer / Java / JavaScript developer with strong background in web and Java application development and leadership
-          experience. I love building software applications - starting from early-stage prototype and transforming it into
-          something people truly value. I'm an active contributor to Mozilla's Open Source projects.</p>
+        <p class="mb-5"> Full-stack Software Engineer with strong background in web and Java application development and leadership experience.
+          I love building software applications - starting from early-stage prototype and transforming it into something
+          people truly value. I'm an active contributor to Mozilla's Open Source projects.</p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
             <a href="https://www.linkedin.com/in/chiranjeevi-sd/">
@@ -178,7 +178,7 @@
             <h3 class="mb-0">PES College of Engineering</h3>
             <div class="subheading mb-3">Bachelor of Engineering</div>
             <div>Computer Science & Engineering</div>
-            <p>GPA: 3.7</p>
+            <p>GPA: 4</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2009 - July 2013</span>
@@ -193,77 +193,85 @@
         <h2 class="mb-5">Projects</h2>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">User Management - React Web App</h3>
-            <p>Developed Single Page Web Application using REACT.JS & Redux; Used JavaScript tools like gulp, es-lint, react-router
-              for workflow.</p>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Coffee Ordering Chat-Bot</h3>
-            <p>Developed a coffee ordering chat bot using AWS LEX. Used Severless framework with Lambda for input validation.
-              Integrated Twilio’s Programmable SMS API to send confirmation SMS when a coffee order is placed.</p>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Book Store - MEAN Web App</h3>
-            <p>Developed Single Page Web Application using MEAN stack; lists various books & its details. Designed REST API
-              using Node.JS which allows the app to create, update, delete and persist the book info to MongoDb.</p>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
             <h3 class="mb-0">Key-Value NoSQL Database</h3>
             <p>Designed & developed an in-memory NoSQL database, using standard Java Collection Libraries</p>
             <p>It supports CRUD and querying data from DB. Persistence of Db is achieved using XML documents</p>
           </div>
         </div>
       </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-      <div class="my-auto">
-        <h2 class="mb-5">Skills</h2>
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            JAVA</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            JavaScript</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            React.js</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Node.js</li>
-        </ul>
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">Operating System Principles - Implementation</h3>
+          <p>Simulate features of an OS such as Threads & Task Scheduling, File System Management, Ports for various OS configurations
+            using Java</p>
+          <p>Multithreaded Java application built on top of operating system module wrapper classes</p>
+        </div>
       </div>
-    </section>
+  </div>
+  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+    <div class="resume-content mr-auto">
+      <h3 class="mb-0">User Management - React Web App</h3>
+      <p>Developed Single Page Web Application using REACT.JS & Redux; Used JavaScript tools like gulp, es-lint, react-router
+        for workflow.</p>
+    </div>
+  </div>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-      <div class="my-auto">
-        <h2 class="mb-5">Interests</h2>
-        <p>I enjoy clicking pictures.</p>
-        <p class="mb-0">I spend a large amount of my free time exploring the latest technolgy advancements in the web development world.</p>
-      </div>
-    </section>
+  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+    <div class="resume-content mr-auto">
+      <h3 class="mb-0">Coffee Ordering Chat-Bot</h3>
+      <p>Developed a coffee ordering chat bot using AWS LEX. Used Severless framework with Lambda for input validation. Integrated
+        Twilio’s Programmable SMS API to send confirmation SMS when a coffee order is placed.</p>
+    </div>
+  </div>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-      <div class="my-auto">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Live Wire Award - HCL Technologies - For excellent performance</li>
-        </ul>
-      </div>
-    </section>
+  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+    <div class="resume-content mr-auto">
+      <h3 class="mb-0">Book Store - MEAN Web App</h3>
+      <p>Developed Single Page Web Application using MEAN stack; lists various books & its details. Designed REST API using
+        Node.JS which allows the app to create, update, delete and persist the book info to MongoDb.</p>
+    </div>
+  </div>
+  </section>
+
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+    <div class="my-auto">
+      <h2 class="mb-5">Skills</h2>
+      <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+      <ul class="fa-ul mb-0">
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          JAVA</li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          JavaScript</li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          React.js</li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          Node.js</li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+    <div class="my-auto">
+      <h2 class="mb-5">Interests</h2>
+      <p>I enjoy clicking pictures.</p>
+      <p class="mb-0">I spend a large amount of my free time exploring the latest technolgy advancements in the web development world.</p>
+    </div>
+  </section>
+
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+    <div class="my-auto">
+      <h2 class="mb-5">Awards &amp; Certifications</h2>
+      <ul class="fa-ul mb-0">
+        <li>
+          <i class="fa-li fa fa-trophy text-warning"></i>
+          Live Wire Award - HCL Technologies - For excellent performance</li>
+      </ul>
+    </div>
+  </section>
 
   </div>
 
