--- a/index.html
+++ b/index.html
@@ -207,71 +207,70 @@
           <p>Multithreaded Java application built on top of operating system module wrapper classes</p>
         </div>
       </div>
-  </div>
-  <div class="resume-item d-flex flex-column flex-md-row mb-5">
-    <div class="resume-content mr-auto">
-      <h3 class="mb-0">User Management - React Web App</h3>
-      <p>Developed Single Page Web Application using REACT.JS & Redux; Used JavaScript tools like gulp, es-lint, react-router
-        for workflow.</p>
-    </div>
-  </div>
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">User Management - React Web App</h3>
+          <p>Developed Single Page Web Application using REACT.JS & Redux; Used JavaScript tools like gulp, es-lint, react-router
+            for workflow.</p>
+        </div>
+      </div>
 
-  <div class="resume-item d-flex flex-column flex-md-row mb-5">
-    <div class="resume-content mr-auto">
-      <h3 class="mb-0">Coffee Ordering Chat-Bot</h3>
-      <p>Developed a coffee ordering chat bot using AWS LEX. Used Severless framework with Lambda for input validation. Integrated
-        Twilio’s Programmable SMS API to send confirmation SMS when a coffee order is placed.</p>
-    </div>
-  </div>
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">Coffee Ordering Chat-Bot</h3>
+          <p>Developed a coffee ordering chat bot using AWS LEX. Used Severless framework with Lambda for input validation.
+            Integrated Twilio’s Programmable SMS API to send confirmation SMS when a coffee order is placed.</p>
+        </div>
+      </div>
 
-  <div class="resume-item d-flex flex-column flex-md-row mb-5">
-    <div class="resume-content mr-auto">
-      <h3 class="mb-0">Book Store - MEAN Web App</h3>
-      <p>Developed Single Page Web Application using MEAN stack; lists various books & its details. Designed REST API using
-        Node.JS which allows the app to create, update, delete and persist the book info to MongoDb.</p>
-    </div>
-  </div>
-  </section>
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">Book Store - MEAN Web App</h3>
+          <p>Developed Single Page Web Application using MEAN stack; lists various books & its details. Designed REST API using
+            Node.JS which allows the app to create, update, delete and persist the book info to MongoDb.</p>
+        </div>
+      </div>
+    </section>
 
-  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-    <div class="my-auto">
-      <h2 class="mb-5">Skills</h2>
-      <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-      <ul class="fa-ul mb-0">
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          JAVA</li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          JavaScript</li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          React.js</li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Node.js</li>
-      </ul>
-    </div>
-  </section>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+      <div class="my-auto">
+        <h2 class="mb-5">Skills</h2>
+        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            JAVA</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            JavaScript</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            React.js</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Node.js</li>
+        </ul>
+      </div>
+    </section>
 
-  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-    <div class="my-auto">
-      <h2 class="mb-5">Interests</h2>
-      <p>I enjoy clicking pictures.</p>
-      <p class="mb-0">I spend a large amount of my free time exploring the latest technolgy advancements in the web development world.</p>
-    </div>
-  </section>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <div class="my-auto">
+        <h2 class="mb-5">Interests</h2>
+        <p>I enjoy clicking pictures.</p>
+        <p class="mb-0">I spend a large amount of my free time exploring the latest technolgy advancements in the web development world.</p>
+      </div>
+    </section>
 
-  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-    <div class="my-auto">
-      <h2 class="mb-5">Awards &amp; Certifications</h2>
-      <ul class="fa-ul mb-0">
-        <li>
-          <i class="fa-li fa fa-trophy text-warning"></i>
-          Live Wire Award - HCL Technologies - For excellent performance</li>
-      </ul>
-    </div>
-  </section>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <div class="my-auto">
+        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Live Wire Award - HCL Technologies - For excellent performance</li>
+        </ul>
+      </div>
+    </section>
 
   </div>
 
